--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,8 +1,17 @@
 //Fuentes
 $h1ycuerpo: "Della Respira", serif;
 $subtitulos: "Turret Road", serif;
-$colorfondo:  rgb(40, 70, 70);
-
+//Colores
+$colores:(
+    fondo: rgb(40, 70, 70),
+    tit1: red,
+    tit2: orangered,
+    tit3: lightsalmon,
+    txtppl: aquamarine,
+    txtsec: rgb(7, 162, 43),
+    link: orange,
+);
+//Contenedores
 @mixin flexrowspbetweencenter {
     display: flex;
     flex-direction: row;
@@ -21,12 +30,29 @@ $colorfondo:  rgb(40, 70, 70);
     justify-content: center;
     align-items: center;
 }
+@mixin recuadro {
+    border: 2px solid orange;
+    display:flex;
+    flex-direction: column;
+    padding: 10px;
+    justify-content: baseline;
+}
+//Detalles
 @mixin enlaces {
     text-decoration: none;
-    color: orange;
+    color: map-get($colores, link);
     font-size: 1.2rem;
+    transition: color 2s, background-color 2s;
+    border-radius: 5px;
+    padding: 2px;
 }
 @mixin hoverenlaces {
-    color: orangered;
+    color: map-get($colores, tit2);
     background-color: rgb(0, 0, 0);
+}
+@mixin boton {
+    background-color: map-get($colores, txtppl);
+    font-family: $h1ycuerpo;
+    color: map-get($colores, tit2);
+    border-radius: 5px;
 }
