Se cambia color menu hamburguesa, se agrega imagen al header, se corrige nombre y cambia ruta de algunas imagenes.

--- a/cs/styles.css
+++ b/cs/styles.css
@@ -106,7 +106,6 @@ footer {
 .navbar a {
   text-decoration: none;
   color: orange;
-  background-color: rgb(40, 70, 70);
   font-size: 1.2rem;
   transition: color 2s, background-color 2s;
   border-radius: 5px;
@@ -116,7 +115,6 @@ footer {
 a {
   text-decoration: none;
   color: orange;
-  background-color: rgb(40, 70, 70);
   font-size: 1.2rem;
   transition: color 2s, background-color 2s;
   border-radius: 5px;
@@ -140,7 +138,6 @@ footer a {
   align-items: center;
   text-decoration: none;
   color: orange;
-  background-color: rgb(40, 70, 70);
   font-size: 1.2rem;
   transition: color 2s, background-color 2s;
   border-radius: 5px;
@@ -149,7 +146,9 @@ footer a {
 }
 
 body {
-  background-color: rgb(40, 70, 70);
+  background-image: url(../../assets/imagenes/cod-bin-nar.jpg);
+  background-position: center;
+  background-size: contain;
 }
 
 /*Titulos*/
@@ -194,9 +193,7 @@ li p {
 /*IDs*/
 #pCarrusel {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
 }
 
 #logoCod {
@@ -211,13 +208,6 @@ li p {
 
 #imgModos {
   height: 100vh;
-}
-
-#colorHambur {
-  color: orange;
-  border: 1px solid orange;
-  padding: 5px;
-  border-radius: 5px;
 }
 
 /*Clases*/
@@ -243,18 +233,10 @@ li p {
 }
 
 .boton {
-  background-color: rgb(40, 70, 70);
+  background-color: aquamarine;
   font-family: "Della Respira", serif;
   color: orangered;
   border-radius: 5px;
-  justify-items: center;
-}
-
-.formulario {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
