--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -41,6 +41,7 @@ $colores:(
 @mixin enlaces {
     text-decoration: none;
     color: map-get($colores, link);
+    background-color: map-get($colores , fondo);
     font-size: 1.2rem;
     transition: color 2s, background-color 2s;
     border-radius: 5px;
@@ -51,8 +52,9 @@ $colores:(
     background-color: rgb(0, 0, 0);
 }
 @mixin boton {
-    background-color: map-get($colores, txtppl);
+    background-color: map-get($colores, fondo);
     font-family: $h1ycuerpo;
     color: map-get($colores, tit2);
     border-radius: 5px;
+    justify-items: center;
 }
