--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,14 @@ li p {
   border-radius: 5px;
 }
 
+#carrusel2 .carousel-inner {
+  height: 65vh;
+}
+
+#carrusel3 .carousel-inner {
+  height: 65vh;
+}
+
 /*Clases*/
 .logoCod {
   width: 100%;
@@ -251,6 +259,14 @@ li p {
   margin: 10px;
 }
 
+.imgCuadrada {
+  box-shadow: 0px 5px 10px;
+  width: 100%;
+  height: 65vh;
+  object-fit: contain;
+  max-height: 80vh;
+}
+
 .recuadro {
   border: 2px solid #ffcb5e;
   border-radius: 10px;
@@ -272,6 +288,7 @@ li p {
   color: #e46a45;
   border-radius: 5px;
   justify-items: center;
+  margin: 10px;
 }
 
 .formulario {
@@ -311,6 +328,7 @@ li p {
 .modoJuego:hover .descripcion {
   max-height: 300px;
   opacity: 1;
+  transition: 2s;
 }
 
 /*# sourceMappingURL=styles.css.map */
